# Maya

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml  run_dvba_scan.py  test_results.txt
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
assets/wordlists/: deeplink-payloads.txt  sqli-payloads.txt
companion_app/android/: CompanionServer.kt  README.md  build.gradle.kts  (+5 more)
containers/: Dockerfile.apk-builder  Dockerfile.sandbox
docs/: INDEX.md  README.md  ROADMAP.md  building-and-infrastructure.md  companion-app.md  contributing.md  llm-configuration.md
files/: 01-ARCHITECTURE.md  02-MODELS-AND-DATA-STRUCTURES.md  03-TOOLS-IMPLEMENTATION-GUIDE.md  04-AGENT-SYSTEM-AND-LLM-INTEGRATION.md  05-SKILLS-RUNTIME-COMPANION-APP.md  06-STRIX-REVERSE-ENGINEERING-REFERENCE.md  07-IMPLEMENTATION-ROADMAP.md  08-AMENDMENTS-AND-LIMITATION-FIXES.md
maya/: __init__.py  main.py  models.py
scripts/: install.sh  setup-host.sh
tests/: test_agent_graph_tools.py  test_agent_loop.py  test_caido_tool_api.py  test_companion_command.py  test_companion_live.py  test_compliance_tool.py  test_docker_runtime_lifecycle.py  test_drozer_companion.py  test_executor.py  test_executor_sandbox_route.py  test_integration_device_backed.py  test_llm_config.py  test_parser.py  test_phase2_tools.py  test_skills_loader.py  test_smoke_cli.py  test_smoke_request_queue.py  test_smoke_runtime.py  test_smoke_shared_dynamic_tools.py
(+139 files in other folders)
